# calculador_ci_cd

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_INFO.md  README.md  main.c  main.h  run_project.bat  test.c
.github/workflows/: ci-cd.yml
include/: calculadora.h  operaciones_avanzadas.h  operaciones_basicas.h  utilidades.h
src/: calculadora.c  operaciones_avanzadas.c  operaciones_basicas.c  utilidades.c
test/: test.c  test.h
